core/codegen/tests/ui-fail-stable/route-path-bad-syntax.stderr
error: invalid route URI: expected token '/' but found 'a' at index 0
       ␛[1;34m= ␛[0m␛[1;36mhelp␛[0m␛[39m: ␛[0m␛[1;39mexpected URI in origin form: "/path/<param>"␛[0m
 --> tests/ui-fail-stable/route-path-bad-syntax.rs:5:8
  |
5 | #[get("a")]
  |        ^

error: invalid route URI: unexpected EOF: expected token '/' at index 0
       ␛[1;34m= ␛[0m␛[1;36mhelp␛[0m␛[39m: ␛[0m␛[1;39mexpected URI in origin form: "/path/<param>"␛[0m
 --> tests/ui-fail-stable/route-path-bad-syntax.rs:8:8
  |
8 | #[get("")]
  |        ^

error: invalid route URI: expected token '/' but found 'a' at index 0
       ␛[1;34m= ␛[0m␛[1;36mhelp␛[0m␛[39m: ␛[0m␛[1;39mexpected URI in origin form: "/path/<param>"␛[0m
  --> tests/ui-fail-stable/route-path-bad-syntax.rs:11:8
   |
11 | #[get("a/b/c")]
   |        ^

error: route URIs cannot contain empty segments
       ␛[1;34m= ␛[0m␛[1;32mnote␛[0m␛[39m: ␛[0m␛[1;39mexpected "/a/b", found "/a///b"␛[0m
  --> tests/ui-fail-stable/route-path-bad-syntax.rs:14:10
   |
14 | #[get("/a///b")]
   |          ^^

error: route URIs cannot contain empty segments
       ␛[1;34m= ␛[0m␛[1;32mnote␛[0m␛[39m: ␛[0m␛[1;39mexpected "/?bat", found "/?bat&&"␛[0m
  --> tests/ui-fail-stable/route-path-bad-syntax.rs:17:13
   |
17 | #[get("/?bat&&")]
   |             ^^

error: route URIs cannot contain empty segments
       ␛[1;34m= ␛[0m␛[1;32mnote␛[0m␛[39m: ␛[0m␛[1;39mexpected "/?bat", found "/?bat&&"␛[0m
  --> tests/ui-fail-stable/route-path-bad-syntax.rs:20:13
   |
20 | #[get("/?bat&&")]
   |             ^^

error: route URIs cannot contain empty segments
       ␛[1;34m= ␛[0m␛[1;32mnote␛[0m␛[39m: ␛[0m␛[1;39mexpected "/a/b/", found "/a/b//"␛[0m
  --> tests/ui-fail-stable/route-path-bad-syntax.rs:23:12
   |
23 | #[get("/a/b//")]
   |            ^^

error: unused parameter
  --> tests/ui-fail-stable/route-path-bad-syntax.rs:42:10
   |
42 | #[get("/<name>")]
   |          ^^^^

error: ␛[1;34m[␛[0m␛[1;32mnote␛[0m␛[1;34m] ␛[0m␛[1;39mexpected argument named `name` here␛[0m
  --> tests/ui-fail-stable/route-path-bad-syntax.rs:43:6
   |
43 | fn h0(_name: usize) {}
   |      ^^^^^^^^^^^^^^

error: unused parameter
  --> tests/ui-fail-stable/route-path-bad-syntax.rs:45:12
   |
45 | #[get("/a?<r>")]
   |            ^

error: ␛[1;34m[␛[0m␛[1;32mnote␛[0m␛[1;34m] ␛[0m␛[1;39mexpected argument named `r` here␛[0m
  --> tests/ui-fail-stable/route-path-bad-syntax.rs:46:6
   |
46 | fn h1() {}
   |      ^^

error: unused parameter
  --> tests/ui-fail-stable/route-path-bad-syntax.rs:48:23
   |
48 | #[post("/a", data = "<test>")]
   |                       ^^^^

error: ␛[1;34m[␛[0m␛[1;32mnote␛[0m␛[1;34m] ␛[0m␛[1;39mexpected argument named `test` here␛[0m
  --> tests/ui-fail-stable/route-path-bad-syntax.rs:49:6
   |
49 | fn h2() {}
   |      ^^

error: unused parameter
  --> tests/ui-fail-stable/route-path-bad-syntax.rs:51:10
   |
51 | #[get("/<_r>")]
   |          ^^

error: ␛[1;34m[␛[0m␛[1;32mnote␛[0m␛[1;34m] ␛[0m␛[1;39mexpected argument named `_r` here␛[0m
  --> tests/ui-fail-stable/route-path-bad-syntax.rs:52:6
   |
52 | fn h3() {}
   |      ^^

error: unused parameter
  --> tests/ui-fail-stable/route-path-bad-syntax.rs:54:15
   |
54 | #[get("/<_r>/<b>")]
   |               ^

error: ␛[1;34m[␛[0m␛[1;32mnote␛[0m␛[1;34m] ␛[0m␛[1;39mexpected argument named `b` here␛[0m
  --> tests/ui-fail-stable/route-path-bad-syntax.rs:55:6
   |
55 | fn h4() {}
   |      ^^

error: invalid identifier: `foo_.`
       ␛[1;34m= ␛[0m␛[1;36mhelp␛[0m␛[39m: ␛[0m␛[1;39mdynamic parameters must be valid identifiers␛[0m
       ␛[1;34m= ␛[0m␛[1;36mhelp␛[0m␛[39m: ␛[0m␛[1;39mdid you mean `<foo_>`?␛[0m
  --> tests/ui-fail-stable/route-path-bad-syntax.rs:60:10
   |
60 | #[get("/<foo_.>")]
   |          ^^^^^

error: invalid identifier: `foo*`
       ␛[1;34m= ␛[0m␛[1;36mhelp␛[0m␛[39m: ␛[0m␛[1;39mdynamic parameters must be valid identifiers␛[0m
       ␛[1;34m= ␛[0m␛[1;36mhelp␛[0m␛[39m: ␛[0m␛[1;39mdid you mean `<foo>`?␛[0m
  --> tests/ui-fail-stable/route-path-bad-syntax.rs:63:10
   |
63 | #[get("/<foo*>")]
   |          ^^^^

error: invalid identifier: `!`
       ␛[1;34m= ␛[0m␛[1;36mhelp␛[0m␛[39m: ␛[0m␛[1;39mdynamic parameters must be valid identifiers␛[0m
       ␛[1;34m= ␛[0m␛[1;36mhelp␛[0m␛[39m: ␛[0m␛[1;39mdid you mean `<param>`?␛[0m
  --> tests/ui-fail-stable/route-path-bad-syntax.rs:66:10
   |
66 | #[get("/<!>")]
   |          ^

error: invalid identifier: `name>:<id`
       ␛[1;34m= ␛[0m␛[1;36mhelp␛[0m␛[39m: ␛[0m␛[1;39mdynamic parameters must be valid identifiers␛[0m
       ␛[1;34m= ␛[0m␛[1;36mhelp␛[0m␛[39m: ␛[0m␛[1;39mdid you mean `<nameid>`?␛[0m
  --> tests/ui-fail-stable/route-path-bad-syntax.rs:69:10
   |
69 | #[get("/<name>:<id>")]
   |          ^^^^^^^^^

error: unexpected static parameter
       ␛[1;34m= ␛[0m␛[1;36mhelp␛[0m␛[39m: ␛[0m␛[1;39mparameter must be dynamic: `<foo>`␛[0m
  --> tests/ui-fail-stable/route-path-bad-syntax.rs:74:20
   |
74 | #[get("/", data = "foo")]
   |                    ^^^

error: parameter cannot be trailing
       ␛[1;34m= ␛[0m␛[1;36mhelp␛[0m␛[39m: ␛[0m␛[1;39mdid you mean `<foo>`?␛[0m
  --> tests/ui-fail-stable/route-path-bad-syntax.rs:77:20
   |
77 | #[get("/", data = "<foo..>")]
   |                    ^^^^^^^

error: unexpected static parameter
       ␛[1;34m= ␛[0m␛[1;36mhelp␛[0m␛[39m: ␛[0m␛[1;39mparameter must be dynamic: `<foo>`␛[0m
  --> tests/ui-fail-stable/route-path-bad-syntax.rs:80:20
   |
80 | #[get("/", data = "<foo")]
   |                    ^^^^

error: invalid identifier: `test `
       ␛[1;34m= ␛[0m␛[1;36mhelp␛[0m␛[39m: ␛[0m␛[1;39mdynamic parameters must be valid identifiers␛[0m
       ␛[1;34m= ␛[0m␛[1;36mhelp␛[0m␛[39m: ␛[0m␛[1;39mdid you mean `<test>`?␛[0m
  --> tests/ui-fail-stable/route-path-bad-syntax.rs:83:21
   |
83 | #[get("/", data = "<test >")]
   |                     ^^^^^

error: handler arguments must be named
       ␛[1;34m= ␛[0m␛[1;36mhelp␛[0m␛[39m: ␛[0m␛[1;39mto name an ignored handler argument, use `_name`␛[0m
  --> tests/ui-fail-stable/route-path-bad-syntax.rs:89:7
   |
89 | fn k0(_: usize) {}
   |       ^^^^^^^^

error: parameters cannot be empty
  --> tests/ui-fail-stable/route-path-bad-syntax.rs:93:9
   |
93 | #[get("/<>")]
   |         ^^
